@@ -178,6 +178,7 @@ Oystein Gisnas
 Patrick C. Beard
 Patrick Chanezon
 Patrick G. Heck (Gus Heck)
+Patrick Martin
 Paul Austin
 Paul Christmann
 Paul Galbraith
